syntax = "proto3";
package chat;

service ChatService {
  
  rpc CreateMessage(CreateMessageRequest) returns (CreateMessageResponse){};
  rpc UpdateMessage(UpdateMessageRequest) returns (UpdateMessageResponse){};
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse){};
  rpc FindMessageByUser(FindMessageByUserRequest) returns (FindMessageByUserResponse) {};
  rpc FindMessageById(FindMessageByIdRequest) returns (FindMessageByIdResponse){};
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse){};
  rpc DeleteRoomMessages(DeleteRoomMessagesRequest) returns (DeleteRoomMessagesResponse){};

  // * chat room
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse){};
  rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomResponse){};
  rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse){};
  rpc FindRoomByRoomId(FindRoomByRoomIdRequest) returns (FindRoomByRoomIdResponse){};
} 

message MessageEnums {
  enum MediaType {
    text=0;
    audio=1;
    photo=2;
  }

  enum Status {
    sent=0;
    received=1;
    seen=2;
  }
}

message Message {
  string _id=1;
  string id=2;
  string roomId = 3;
  string authorId = 4;
  string authorName = 5;
  string authorImage = 6;
  string receiverId = 7;
  MessageEnums.MediaType mediaType=8;
  string message = 9;
  string createdAt =10;
  string updatedAt =11;
  MessageEnums.Status status = 12;
}


message MessageRoom {
  string _id = 1;
  string roomId = 2;
  string userId = 3;
  string targetId = 4;
  string createdAt=5;
  string updatedAt=6;
}

message ChatRoom {
  string  _id=1;
  string roomId=2;
  string userId=3;
  string targetId=4;
  string createdAt=5;
  string updatedAt=6;
}



message CreateMessageRequest {
  Message message =1;
}

message CreateMessageResponse {
  Message message =1;
}


message UpdateMessageRequest {
  Message message =1;
}

message UpdateMessageResponse {
  Message message =1;
}


message DeleteMessageRequest {
  string roomId =1;
}

message DeleteMessageResponse {
  Message message =1;
}

message FindMessageByUserRequest {
  string userId=1;
}

message FindMessageByUserResponse {
  repeated Message messages=1;
}

message FindMessageByIdRequest {
  string messageId =1;
}

message FindMessageByIdResponse {
  Message message =1;
}

message GetMessagesRequest {
  string roomId=1;
  int32 page=2;
}

message GetMessagesResponse {
  repeated Message messages=1;
  int32 numberOfPages=2;
  int32 currentPage=3;
}

message DeleteRoomMessagesRequest {
  string roomId=1;
}

message DeleteRoomMessagesResponse {
  bool isDeleted=1;
}

// * chat room

message CreateRoomRequest {
  ChatRoom chatRoom=1;
}

message CreateRoomResponse {
  ChatRoom chatRoom=1;
}

message UpdateRoomRequest {
  ChatRoom chatRoom=1;
}

message UpdateRoomResponse {
  ChatRoom chatRoom=1;
}

message DeleteRoomRequest {
  string chatRoomId=1;
}

message DeleteRoomResponse {
  ChatRoom chatRoom=1;
}


message FindRoomByRoomIdRequest {
  string chatRoomId=1;
}

message FindRoomByRoomIdResponse {
  repeated ChatRoom chatRooms=1;
}

