// Original file: src/proto/chat.proto


export interface ChatRoom {
  '_id'?: (string);
  'roomId'?: (string);
  'userId'?: (string);
  'targetId'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface ChatRoom__Output {
  '_id'?: (string);
  'roomId'?: (string);
  'userId'?: (string);
  'targetId'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
