// Original file: src/proto/chat.proto


export interface MessageRoom {
  '_id'?: (string);
  'roomId'?: (string);
  'userId'?: (string);
  'targetId'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface MessageRoom__Output {
  '_id'?: (string);
  'roomId'?: (string);
  'userId'?: (string);
  'targetId'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
