// Original file: src/proto/chat.proto

import type { ChatRoom as _chat_ChatRoom, ChatRoom__Output as _chat_ChatRoom__Output } from '../chat/ChatRoom';

export interface FindRoomByRoomIdResponse {
  'chatRooms'?: (_chat_ChatRoom)[];
}

export interface FindRoomByRoomIdResponse__Output {
  'chatRooms'?: (_chat_ChatRoom__Output)[];
}
