// Original file: src/proto/chat.proto

import type { ChatRoom as _chat_ChatRoom, ChatRoom__Output as _chat_ChatRoom__Output } from '../chat/ChatRoom';

export interface findRoomByRoomIdResponse {
  'chatRooms'?: (_chat_ChatRoom)[];
}

export interface findRoomByRoomIdResponse__Output {
  'chatRooms'?: (_chat_ChatRoom__Output)[];
}
